--- a/templates/login.html
+++ b/templates/login.html
@@ -13,9 +13,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
 
 
-    <link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}">
 
-    <link rel="shortcut icon" href="img/icon.svg">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='img/icon.svg') }}">
 
 </head>
 
@@ -84,7 +84,7 @@
 
                 <a href="" class="google-btn">
 
-                    <img src="img/google_btn.png" alt="Google"> Google
+                    <img src="{{ url_for('static', filename='img/google_btn.png') }}" alt="Google"> Google
                 </a>
             </div>
 
@@ -109,7 +109,7 @@
 
 
 
-    <script src="js/login.js"></script>
+    <script src="{{ url_for('static', filename='js/login.js') }}"></script>
 </body>
 
 </html>
