--- a/templates/registration.html
+++ b/templates/registration.html
@@ -13,9 +13,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
 
 
-    <link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}">
 
-    <link rel="shortcut icon" href="img/icon.svg">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='img/icon.svg') }}">
 
 </head>
 
@@ -112,7 +112,7 @@
 
 
 
-    <script src="js/login.js"></script>
+    <script src="{{ url_for('static', filename='js/login.js') }}"></script>
 </body>
 
 </html>
