--- a/templates/registration.html
+++ b/templates/registration.html
@@ -14,6 +14,7 @@
 
 
     <link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}">
+    <link rel="stylesheet" href="../static/css/login.css">
 
     <link rel="shortcut icon" href="{{ url_for('static', filename='img/icon.svg') }}">
 
@@ -45,24 +46,24 @@
                     <div class="center">
                         <form method="post">
                             <div class="txt-field">
-                                <input type="text" required>
+                                <input type="text" id="username" required>
                                 <span></span>
                                 <label>Имя</label>
                             </div>
                             <div class="txt-field">
-                                <input type="text" required>
+                                <input type="text" id="email" required>
                                 <span></span>
                                 <label>Email</label>
                             </div>
                             <div class="txt-field password">
-                                <input type="password" id="password-input" name="password" required>
+                                <input type="password" id="password" name="pass" required>
                                 <a href="#" class="password-control" onclick="return show_hide_password(this);"></a>
                                 <span></span>
                                 <label>Пароль</label>
                             </div>
                             <div class="txt-field password">
-                                <input type="password" id="password-input" name="password" required>
-                                <a href="#" class="password-control" onclick="return show_hide_password(this);"></a>
+                                <input type="password" id="second-password" name="pass" required>
+                                <a href="#" class="password-control" onclick="return show_hide_secPassword(this);"></a>
                                 <span></span>
                                 <label>Повторите пароль</label>
                             </div>
@@ -73,7 +74,7 @@
                     </div>
                 </div>
 
-                <div id="Phone" class="tabcontent">
+                <div id="phone" class="tabcontent">
                     <div class="center">
                         <form method="post">
                             <div class="txt-field">
@@ -113,6 +114,7 @@
 
 
     <script src="{{ url_for('static', filename='js/login.js') }}"></script>
+    <script src="../static/js/login.js"></script>
 </body>
 
 </html>
