--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -106,9 +106,9 @@
 
 
                 <div id="catalogBtn">
-                    <button class="btn active" onclick="filterSelection('all')">Все</button>
+                    <button class="btn active catalog-btn_first" onclick="filterSelection('all')">Все</button>
                     <button class="btn" onclick="filterSelection('new')"> Новые</button>
-                    <button class="btn" onclick="filterSelection('pop')"> Популярные</button>
+                    <button class="btn catalog-btn_last" onclick="filterSelection('pop')"> Популярные</button>
                 </div>
             </div>
 
