--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="../static/css/mobNav.css">
     <link rel="stylesheet" href="../static/css/catalog.css">
 
+
 </head>
 
 
@@ -107,8 +108,8 @@
 
                 <div id="catalogBtn">
                     <button class="btn active catalog-btn_first" onclick="filterSelection('all')">Все</button>
-                    <button class="btn" onclick="filterSelection('new')"> Новые</button>
-                    <button class="btn catalog-btn_last" onclick="filterSelection('pop')"> Популярные</button>
+                    <button class="btn" onclick="filterSelection('new')">Новые</button>
+                    <button class="btn catalog-btn_last" onclick="filterSelection('pop')">Популярные</button>
                 </div>
             </div>
 
@@ -126,5 +127,15 @@
     </section>
 
 
-    <script src="../static/js/catalog.js"></script>
+
+
+</body>
+
+</html>
+
+
+<script src="../static/js/catalog.js"></script>
+<script src="../static/js/"></script>
+
+
 </body>
