--- a/static/css/popUp.css
+++ b/static/css/popUp.css
@@ -92,6 +92,20 @@
     padding: 2px 16px;
 }
 
+.otc label {
+    border: 0;
+    clip: rect(1px, 1px, 1px, 1px);
+    -webkit-clip-path: inset(50%);
+    clip-path: inset(50%);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+    white-space: nowrap;
+}
+
 .otc fieldset {
     border: 0;
     padding: 0;
