--- a/templates/registration.html
+++ b/templates/registration.html
@@ -147,6 +147,8 @@
                         </div>
                     </fieldset>
                 </form>
+
+                <input type="submit" value="Подтвердить" id="otc_check">
             </div>
 
         </div>
