--- a/templates/registration.html
+++ b/templates/registration.html
@@ -46,7 +46,7 @@
                     <button class="tablinks" onclick="openTab(event, 'Phone')">Номер телефона</button>
                 </div>
 
-                <div id="Email" class="tabcontent">
+                <div id="email" class="tabcontent">
                     <div class="center">
                         <form>
                             <div class="txt-field">
@@ -121,7 +121,7 @@
         <div class="otc-modal-content">
             <div class="otc-modal-header">
                 <span class="close">&times;</span>
-                <h2 class="otc-modal-title">Прверка кода</h2>
+                <h2 class="otc-modal-title">Проверка кода</h2>
                 <p class="otc-modal-text">Введите 6-ти значный код из письма на указанном вами почтовом ящике.</p>
             </div>
             <div class="otc-modal-body">
