--- a/static/css/catalog.css
+++ b/static/css/catalog.css
@@ -131,8 +131,6 @@ input[type="search"]::-webkit-search-cancel-button {
     color: var(--main-color-1);
     width: 175px;
     height: 241px;
-    line-height: 100px;
-    text-align: center;
     margin: 2px 2px 30px 2px;
     display: none;
     border-radius: 20px;
@@ -212,4 +210,92 @@ input[type="search"]::-webkit-search-cancel-button {
     font-weight: 700;
     font-size: 15px;
     line-height: 20px;
+}
+
+
+/* CARDS */
+
+.filterItem-text {
+    padding: 5px 11px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 80px;
+}
+
+.filterItem-info {
+    display: flex;
+    justify-content: space-between;
+}
+
+.filterItem-img {
+    width: 175px;
+    height: 143px;
+    object-fit: cover;
+    border-radius: 20px 20px 0px 0px;
+}
+
+.info-student,
+.info-clock {
+    font-family: var(--main-font);
+    font-weight: 700;
+    font-size: 9px;
+    line-height: 7px;
+    color: var(--main-color-6);
+    margin: 0;
+}
+
+.filterItem-title {
+    font-family: var(--main-font);
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 17px;
+    color: var(--main-color-1);
+    margin: 0;
+}
+
+.filterItem-active {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.add-course {
+    font-family: var(--main-font);
+    font-weight: 700;
+    font-size: 11px;
+    line-height: 13px;
+    color: var(--main-color-2);
+    background: var(--main-color-3);
+    border: 2px solid var(--main-color-3);
+    outline: none;
+    text-decoration: none;
+    padding: 5px;
+    cursor: pointer;
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+    transition: 0.6s;
+    -webkit-transition: 0.6s;
+    -moz-transition: 0.6s;
+    -ms-transition: 0.6s;
+    -o-transition: 0.6s;
+}
+
+.add-course:hover {
+    background: transparent;
+    color: var(--main-color-3);
+    transition: 0.3s;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -ms-transition: 0.3s;
+    -o-transition: 0.3s;
+}
+
+.like-btn svg {
+    fill: none;
+    stroke: var(--main-color-1);
+    cursor: pointer;
 }
