--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -115,18 +115,250 @@
 
             <div class="catalog-courses">
                 <div class="courses-wrap">
-                    <div class="filterItem new">1</div>
-                    <div class="filterItem pop">2</div>
-                    <div class="filterItem new">3</div>
-                    <div class="filterItem pop">4</div>
-                    <div class="filterItem new">5</div>
-                    <div class="filterItem pop">6</div>
+
+                    <div class="filterItem new">
+                        <img class="filterItem-img" src="../static/img/courses/dadaism.jpg" alt="фото курса">
+                        <div class="filterItem-text">
+                            <div class="filterItem-info">
+                                <p class="info-student">
+                                    <img src="../static/img/courses/student.svg" alt="иконка">
+                                    <span class="student-col">700 </span> &#32; студентов
+                                </p>
+                                <p class="info-clock">
+                                    <img src="../static/img/courses/clock.svg" alt="иконка"> 2ч. 20м.
+                                </p>
+                            </div>
+                            <h2 class="filterItem-title">Дадаизм</h2>
+                            <div class="filterItem-active">
+                                <button class="add-course">Записаться</button>
+
+
+                                <a class="like-btn">
+                                    <svg width="14" height="12" viewBox="0 0 14 12" xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M11.5811 1.88407C11.301 1.6038 10.9683 1.38146 10.6022 1.22977C10.2361 1.07808 9.84375 1 9.44748 1C9.0512 1 8.6588 1.07808 8.29271 1.22977C7.92661 1.38146 7.59399 1.6038 7.31384 1.88407L6.73244 2.46547L6.15104 1.88407C5.58517 1.3182 4.81768 1.00029 4.01741 1.00029C3.21714 1.00029 2.44965 1.3182 1.88378 1.88407C1.3179 2.44995 1 3.21744 1 4.0177C1 4.81797 1.3179 5.58546 1.88378 6.15134L2.46518 6.73274L6.73244 11L10.9997 6.73274L11.5811 6.15134C11.8614 5.87119 12.0837 5.53857 12.2354 5.17247C12.3871 4.80638 12.4652 4.41398 12.4652 4.0177C12.4652 3.62143 12.3871 3.22903 12.2354 2.86293C12.0837 2.49684 11.8614 2.16422 11.5811 1.88407V1.88407Z"
+                                            stroke-width="1.09698" stroke-linecap="round" stroke-linejoin="round" />
+                                    </svg>
+                                </a>
+                                </li>
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="filterItem pop">
+                        <img class="filterItem-img" src="../static/img/courses/suprematism.jpg" alt="фото курса">
+                        <div class="filterItem-text">
+                            <div class="filterItem-info">
+                                <p class="info-student">
+                                    <img src="../static/img/courses/student.svg" alt="иконка">
+                                    <span class="student-col">350 </span> &#32; студентов
+                                </p>
+                                <p class="info-clock">
+                                    <img src="../static/img/courses/clock.svg" alt="иконка"> 7ч. 20м.
+                                </p>
+                            </div>
+                            <h2 class="filterItem-title">Супрематизм</h2>
+                            <div class="filterItem-active">
+                                <button class="add-course">Записаться</button>
+
+
+                                <a class="like-btn">
+                                    <svg width="14" height="12" viewBox="0 0 14 12" xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M11.5811 1.88407C11.301 1.6038 10.9683 1.38146 10.6022 1.22977C10.2361 1.07808 9.84375 1 9.44748 1C9.0512 1 8.6588 1.07808 8.29271 1.22977C7.92661 1.38146 7.59399 1.6038 7.31384 1.88407L6.73244 2.46547L6.15104 1.88407C5.58517 1.3182 4.81768 1.00029 4.01741 1.00029C3.21714 1.00029 2.44965 1.3182 1.88378 1.88407C1.3179 2.44995 1 3.21744 1 4.0177C1 4.81797 1.3179 5.58546 1.88378 6.15134L2.46518 6.73274L6.73244 11L10.9997 6.73274L11.5811 6.15134C11.8614 5.87119 12.0837 5.53857 12.2354 5.17247C12.3871 4.80638 12.4652 4.41398 12.4652 4.0177C12.4652 3.62143 12.3871 3.22903 12.2354 2.86293C12.0837 2.49684 11.8614 2.16422 11.5811 1.88407V1.88407Z"
+                                            stroke-width="1.09698" stroke-linecap="round" stroke-linejoin="round" />
+                                    </svg>
+                                </a>
+                                </li>
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="filterItem new">
+                        <img class="filterItem-img" src="../static/img/courses/cubism.jpg" alt="фото курса">
+                        <div class="filterItem-text">
+                            <div class="filterItem-info">
+                                <p class="info-student">
+                                    <img src="../static/img/courses/student.svg" alt="иконка">
+                                    <span class="student-col">700 </span> &#32; студентов
+                                </p>
+                                <p class="info-clock">
+                                    <img src="../static/img/courses/clock.svg" alt="иконка"> 2ч. 20м.
+                                </p>
+                            </div>
+                            <h2 class="filterItem-title">Кубизм</h2>
+                            <div class="filterItem-active">
+                                <button class="add-course">Записаться</button>
+
+
+                                <a class="like-btn">
+                                    <svg width="14" height="12" viewBox="0 0 14 12" xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M11.5811 1.88407C11.301 1.6038 10.9683 1.38146 10.6022 1.22977C10.2361 1.07808 9.84375 1 9.44748 1C9.0512 1 8.6588 1.07808 8.29271 1.22977C7.92661 1.38146 7.59399 1.6038 7.31384 1.88407L6.73244 2.46547L6.15104 1.88407C5.58517 1.3182 4.81768 1.00029 4.01741 1.00029C3.21714 1.00029 2.44965 1.3182 1.88378 1.88407C1.3179 2.44995 1 3.21744 1 4.0177C1 4.81797 1.3179 5.58546 1.88378 6.15134L2.46518 6.73274L6.73244 11L10.9997 6.73274L11.5811 6.15134C11.8614 5.87119 12.0837 5.53857 12.2354 5.17247C12.3871 4.80638 12.4652 4.41398 12.4652 4.0177C12.4652 3.62143 12.3871 3.22903 12.2354 2.86293C12.0837 2.49684 11.8614 2.16422 11.5811 1.88407V1.88407Z"
+                                            stroke-width="1.09698" stroke-linecap="round" stroke-linejoin="round" />
+                                    </svg>
+                                </a>
+                                </li>
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="filterItem pop">
+                        <img class="filterItem-img" src="../static/img/courses/luchism.jpg" alt="фото курса">
+                        <div class="filterItem-text">
+                            <div class="filterItem-info">
+                                <p class="info-student">
+                                    <img src="../static/img/courses/student.svg" alt="иконка">
+                                    <span class="student-col">208</span> &#32; студентов
+                                </p>
+                                <p class="info-clock">
+                                    <img src="../static/img/courses/clock.svg" alt="иконка"> 4ч. 30м.
+                                </p>
+                            </div>
+                            <h2 class="filterItem-title">Лучизм</h2>
+                            <div class="filterItem-active">
+                                <button class="add-course">Записаться</button>
+
+
+                                <a class="like-btn">
+                                    <svg width="14" height="12" viewBox="0 0 14 12" xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M11.5811 1.88407C11.301 1.6038 10.9683 1.38146 10.6022 1.22977C10.2361 1.07808 9.84375 1 9.44748 1C9.0512 1 8.6588 1.07808 8.29271 1.22977C7.92661 1.38146 7.59399 1.6038 7.31384 1.88407L6.73244 2.46547L6.15104 1.88407C5.58517 1.3182 4.81768 1.00029 4.01741 1.00029C3.21714 1.00029 2.44965 1.3182 1.88378 1.88407C1.3179 2.44995 1 3.21744 1 4.0177C1 4.81797 1.3179 5.58546 1.88378 6.15134L2.46518 6.73274L6.73244 11L10.9997 6.73274L11.5811 6.15134C11.8614 5.87119 12.0837 5.53857 12.2354 5.17247C12.3871 4.80638 12.4652 4.41398 12.4652 4.0177C12.4652 3.62143 12.3871 3.22903 12.2354 2.86293C12.0837 2.49684 11.8614 2.16422 11.5811 1.88407V1.88407Z"
+                                            stroke-width="1.09698" stroke-linecap="round" stroke-linejoin="round" />
+                                    </svg>
+                                </a>
+                                </li>
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="filterItem new">
+                        <img class="filterItem-img" src="../static/img/courses/1.jpg" alt="фото курса">
+                        <div class="filterItem-text">
+                            <div class="filterItem-info">
+                                <p class="info-student">
+                                    <img src="../static/img/courses/student.svg" alt="иконка">
+                                    <span class="student-col">700 </span> &#32; студентов
+                                </p>
+                                <p class="info-clock">
+                                    <img src="../static/img/courses/clock.svg" alt="иконка"> 2ч. 20м.
+                                </p>
+                            </div>
+                            <h2 class="filterItem-title">Дадаизм</h2>
+                            <div class="filterItem-active">
+                                <button class="add-course">Записаться</button>
+
+
+                                <a class="like-btn">
+                                    <svg width="14" height="12" viewBox="0 0 14 12" xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M11.5811 1.88407C11.301 1.6038 10.9683 1.38146 10.6022 1.22977C10.2361 1.07808 9.84375 1 9.44748 1C9.0512 1 8.6588 1.07808 8.29271 1.22977C7.92661 1.38146 7.59399 1.6038 7.31384 1.88407L6.73244 2.46547L6.15104 1.88407C5.58517 1.3182 4.81768 1.00029 4.01741 1.00029C3.21714 1.00029 2.44965 1.3182 1.88378 1.88407C1.3179 2.44995 1 3.21744 1 4.0177C1 4.81797 1.3179 5.58546 1.88378 6.15134L2.46518 6.73274L6.73244 11L10.9997 6.73274L11.5811 6.15134C11.8614 5.87119 12.0837 5.53857 12.2354 5.17247C12.3871 4.80638 12.4652 4.41398 12.4652 4.0177C12.4652 3.62143 12.3871 3.22903 12.2354 2.86293C12.0837 2.49684 11.8614 2.16422 11.5811 1.88407V1.88407Z"
+                                            stroke-width="1.09698" stroke-linecap="round" stroke-linejoin="round" />
+                                    </svg>
+                                </a>
+                                </li>
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="filterItem pop">
+                        <img class="filterItem-img" src="../static/img/courses/2.jpg" alt="фото курса">
+                        <div class="filterItem-text">
+                            <div class="filterItem-info">
+                                <p class="info-student">
+                                    <img src="../static/img/courses/student.svg" alt="иконка">
+                                    <span class="student-col">350 </span> &#32; студентов
+                                </p>
+                                <p class="info-clock">
+                                    <img src="../static/img/courses/clock.svg" alt="иконка"> 7ч. 20м.
+                                </p>
+                            </div>
+                            <h2 class="filterItem-title">Супрематизм</h2>
+                            <div class="filterItem-active">
+                                <button class="add-course">Записаться</button>
+
+
+                                <a class="like-btn">
+                                    <svg width="14" height="12" viewBox="0 0 14 12" xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M11.5811 1.88407C11.301 1.6038 10.9683 1.38146 10.6022 1.22977C10.2361 1.07808 9.84375 1 9.44748 1C9.0512 1 8.6588 1.07808 8.29271 1.22977C7.92661 1.38146 7.59399 1.6038 7.31384 1.88407L6.73244 2.46547L6.15104 1.88407C5.58517 1.3182 4.81768 1.00029 4.01741 1.00029C3.21714 1.00029 2.44965 1.3182 1.88378 1.88407C1.3179 2.44995 1 3.21744 1 4.0177C1 4.81797 1.3179 5.58546 1.88378 6.15134L2.46518 6.73274L6.73244 11L10.9997 6.73274L11.5811 6.15134C11.8614 5.87119 12.0837 5.53857 12.2354 5.17247C12.3871 4.80638 12.4652 4.41398 12.4652 4.0177C12.4652 3.62143 12.3871 3.22903 12.2354 2.86293C12.0837 2.49684 11.8614 2.16422 11.5811 1.88407V1.88407Z"
+                                            stroke-width="1.09698" stroke-linecap="round" stroke-linejoin="round" />
+                                    </svg>
+                                </a>
+                                </li>
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="filterItem new">
+                        <img class="filterItem-img" src="../static/img/courses/3.jpg" alt="фото курса">
+                        <div class="filterItem-text">
+                            <div class="filterItem-info">
+                                <p class="info-student">
+                                    <img src="../static/img/courses/student.svg" alt="иконка">
+                                    <span class="student-col">700 </span> &#32; студентов
+                                </p>
+                                <p class="info-clock">
+                                    <img src="../static/img/courses/clock.svg" alt="иконка"> 2ч. 20м.
+                                </p>
+                            </div>
+                            <h2 class="filterItem-title">Кубизм</h2>
+                            <div class="filterItem-active">
+                                <button class="add-course">Записаться</button>
+
+
+                                <a class="like-btn">
+                                    <svg width="14" height="12" viewBox="0 0 14 12" xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M11.5811 1.88407C11.301 1.6038 10.9683 1.38146 10.6022 1.22977C10.2361 1.07808 9.84375 1 9.44748 1C9.0512 1 8.6588 1.07808 8.29271 1.22977C7.92661 1.38146 7.59399 1.6038 7.31384 1.88407L6.73244 2.46547L6.15104 1.88407C5.58517 1.3182 4.81768 1.00029 4.01741 1.00029C3.21714 1.00029 2.44965 1.3182 1.88378 1.88407C1.3179 2.44995 1 3.21744 1 4.0177C1 4.81797 1.3179 5.58546 1.88378 6.15134L2.46518 6.73274L6.73244 11L10.9997 6.73274L11.5811 6.15134C11.8614 5.87119 12.0837 5.53857 12.2354 5.17247C12.3871 4.80638 12.4652 4.41398 12.4652 4.0177C12.4652 3.62143 12.3871 3.22903 12.2354 2.86293C12.0837 2.49684 11.8614 2.16422 11.5811 1.88407V1.88407Z"
+                                            stroke-width="1.09698" stroke-linecap="round" stroke-linejoin="round" />
+                                    </svg>
+                                </a>
+                                </li>
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="filterItem new pop">
+                        <img class="filterItem-img" src="../static/img/courses/4.jpg" alt="фото курса">
+                        <div class="filterItem-text">
+                            <div class="filterItem-info">
+                                <p class="info-student">
+                                    <img src="../static/img/courses/student.svg" alt="иконка">
+                                    <span class="student-col">208</span> &#32; студентов
+                                </p>
+                                <p class="info-clock">
+                                    <img src="../static/img/courses/clock.svg" alt="иконка"> 4ч. 30м.
+                                </p>
+                            </div>
+                            <h2 class="filterItem-title">Лучизм</h2>
+                            <div class="filterItem-active">
+                                <button class="add-course">Записаться</button>
+
+
+                                <a class="like-btn">
+                                    <svg width="14" height="12" viewBox="0 0 14 12" xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M11.5811 1.88407C11.301 1.6038 10.9683 1.38146 10.6022 1.22977C10.2361 1.07808 9.84375 1 9.44748 1C9.0512 1 8.6588 1.07808 8.29271 1.22977C7.92661 1.38146 7.59399 1.6038 7.31384 1.88407L6.73244 2.46547L6.15104 1.88407C5.58517 1.3182 4.81768 1.00029 4.01741 1.00029C3.21714 1.00029 2.44965 1.3182 1.88378 1.88407C1.3179 2.44995 1 3.21744 1 4.0177C1 4.81797 1.3179 5.58546 1.88378 6.15134L2.46518 6.73274L6.73244 11L10.9997 6.73274L11.5811 6.15134C11.8614 5.87119 12.0837 5.53857 12.2354 5.17247C12.3871 4.80638 12.4652 4.41398 12.4652 4.0177C12.4652 3.62143 12.3871 3.22903 12.2354 2.86293C12.0837 2.49684 11.8614 2.16422 11.5811 1.88407V1.88407Z"
+                                            stroke-width="1.09698" stroke-linecap="round" stroke-linejoin="round" />
+                                    </svg>
+                                </a>
+                                </li>
+
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-
-
 
 
 </body>
@@ -135,7 +367,6 @@
 
 
 <script src="../static/js/catalog.js"></script>
-<script src="../static/js/"></script>
 
 
 </body>
