--- a/templates/login.html
+++ b/templates/login.html
@@ -13,9 +13,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
 
 
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}">
+    <!-- <link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}">
 
-    <link rel="shortcut icon" href="{{ url_for('static', filename='img/icon.svg') }}">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='img/icon.svg') }}"> -->
+
+    <link rel="shortcut icon" href="../static/img/icon.svg">
+    <link rel="stylesheet" href="../static/css/login.css">
 
 </head>
 
@@ -24,7 +27,7 @@
 
     <section class="main login">
         <div class="header-logo">
-            <a href="index.html">ПроАрт</a>
+            <a href="../index.html">ПроАрт</a>
         </div>
 
         <div class="main-right">
@@ -38,13 +41,13 @@
             <div class="wrapper">
 
                 <div class="tab">
-                    <button class="tablinks" onclick="openTab(event, 'Email')" id="defaultOpen">Email</button>
-                    <button class="tablinks" onclick="openTab(event, 'Phone')">Номер телефона</button>
+                    <button class="tablinks" onclick="openTab(event, 'email')" id="defaultOpen">Email</button>
+                    <button class="tablinks" onclick="openTab(event, 'phone')">Номер телефона</button>
                 </div>
 
-                <div id="Email" class="tabcontent">
+                <div id="email" class="tabcontent">
                     <div class="center">
-                        <form method="post">
+                        <form>
                             <div class="txt-field">
                                 <input type="text" required>
                                 <span></span>
@@ -63,9 +66,9 @@
                     </div>
                 </div>
 
-                <div id="Phone" class="tabcontent">
+                <div id="phone" class="tabcontent">
                     <div class="center">
-                        <form method="post">
+                        <form>
                             <div class="txt-field">
                                 <input type="tel" required>
                                 <span></span>
@@ -84,7 +87,7 @@
 
                 <a href="" class="google-btn">
 
-                    <img src="{{ url_for('static', filename='img/google_btn.png') }}" alt="Google"> Google
+                    <img src="../static/img/google_btn.png" alt="Google"> Google
                 </a>
             </div>
 
@@ -109,7 +112,7 @@
 
 
 
-    <script src="{{ url_for('static', filename='js/login.js') }}"></script>
+    <script src="../static/js/login.js"></script>
 </body>
 
 </html>
