--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -31,7 +31,7 @@
     <nav class="mob-nav">
         <ul>
             <li class="nav-item active-icon">
-                <a href="index.html" class="nav-icon">
+                <a href="../index.html" class="nav-icon">
                     <svg width="22" height="24" viewBox="0 0 22 24" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M20.7777 7.22008L13.4445 0.915623C12.7722 0.325982 11.9019 0 11 0C10.0981 0 9.22786 0.325982 8.55561 0.915623L1.22233 7.22008C0.834116 7.56056 0.524323 7.97824 0.313579 8.44531C0.102835 8.91237 -0.00402421 9.41811 0.000115859 9.92884V20.4043C0.000115859 21.3579 0.386422 22.2725 1.07405 22.9468C1.76168 23.6212 2.6943 24 3.66676 24H18.3333C19.3058 24 20.2384 23.6212 20.926 22.9468C21.6137 22.2725 22 21.3579 22 20.4043V9.91685C22.0024 9.40814 21.8947 8.90471 21.684 8.43984C21.4733 7.97496 21.1644 7.55922 20.7777 7.22008V7.22008ZM13.4445 21.6029H8.55561V15.61C8.55561 15.2922 8.68438 14.9873 8.91359 14.7625C9.1428 14.5378 9.45367 14.4115 9.77782 14.4115H12.2223C12.5464 14.4115 12.8573 14.5378 13.0865 14.7625C13.3157 14.9873 13.4445 15.2922 13.4445 15.61V21.6029ZM19.5555 20.4043C19.5555 20.7222 19.4268 21.027 19.1976 21.2518C18.9683 21.4766 18.6575 21.6029 18.3333 21.6029H15.8889V15.61C15.8889 14.6564 15.5026 13.7418 14.815 13.0675C14.1273 12.3932 13.1947 12.0143 12.2223 12.0143H9.77782C8.80537 12.0143 7.87275 12.3932 7.18512 13.0675C6.49749 13.7418 6.11118 14.6564 6.11118 15.61V21.6029H3.66676C3.34261 21.6029 3.03173 21.4766 2.80252 21.2518C2.57331 21.027 2.44454 20.7222 2.44454 20.4043V9.91685C2.44476 9.74667 2.48193 9.57849 2.55359 9.4235C2.62524 9.2685 2.72972 9.13025 2.8601 9.01793L10.1934 2.72546C10.4164 2.5333 10.7032 2.42733 11 2.42733C11.2969 2.42733 11.5837 2.5333 11.8067 2.72546L19.14 9.01793C19.2704 9.13025 19.3748 9.2685 19.4465 9.4235C19.5181 9.57849 19.5553 9.74667 19.5555 9.91685V20.4043Z" />
@@ -75,13 +75,13 @@
     <section class="catalog-nav">
         <div class="header-menu">
             <div class="header-logo">
-                <a href="index.html">ПроАрт</a>
+                <a href="../index.html">ПроАрт</a>
             </div>
 
             <div class="header-nav">
                 <nav class="main-nav">
                     <a href="#" class="main-nav__link">обучение</a>
-                    <a href="catalog.html" class="main-nav__link"> каталог</a>
+                    <a href="catalog.html" class="main-nav__link">каталог</a>
                     <a href="login.html" class="main-nav__link">войти</a>
                 </nav>
             </div>
@@ -327,6 +327,35 @@
                     </div>
 
                     <div class="filterItem new pop">
+                        <img class="filterItem-img" src="../static/img/courses/4.jpg" alt="фото курса">
+                        <div class="filterItem-text">
+                            <div class="filterItem-info">
+                                <p class="info-student">
+                                    <img src="../static/img/courses/student.svg" alt="иконка">
+                                    <span class="student-col">208</span> &#32; студентов
+                                </p>
+                                <p class="info-clock">
+                                    <img src="../static/img/courses/clock.svg" alt="иконка"> 4ч. 30м.
+                                </p>
+                            </div>
+                            <h2 class="filterItem-title">Лучизм</h2>
+                            <div class="filterItem-active">
+                                <button class="add-course">Записаться</button>
+
+
+                                <a class="like-btn">
+                                    <svg width="14" height="12" viewBox="0 0 14 12" xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M11.5811 1.88407C11.301 1.6038 10.9683 1.38146 10.6022 1.22977C10.2361 1.07808 9.84375 1 9.44748 1C9.0512 1 8.6588 1.07808 8.29271 1.22977C7.92661 1.38146 7.59399 1.6038 7.31384 1.88407L6.73244 2.46547L6.15104 1.88407C5.58517 1.3182 4.81768 1.00029 4.01741 1.00029C3.21714 1.00029 2.44965 1.3182 1.88378 1.88407C1.3179 2.44995 1 3.21744 1 4.0177C1 4.81797 1.3179 5.58546 1.88378 6.15134L2.46518 6.73274L6.73244 11L10.9997 6.73274L11.5811 6.15134C11.8614 5.87119 12.0837 5.53857 12.2354 5.17247C12.3871 4.80638 12.4652 4.41398 12.4652 4.0177C12.4652 3.62143 12.3871 3.22903 12.2354 2.86293C12.0837 2.49684 11.8614 2.16422 11.5811 1.88407V1.88407Z"
+                                            stroke-width="1.09698" stroke-linecap="round" stroke-linejoin="round" />
+                                    </svg>
+                                </a>
+                                </li>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="filterItem pop">
                         <img class="filterItem-img" src="../static/img/courses/4.jpg" alt="фото курса">
                         <div class="filterItem-text">
                             <div class="filterItem-info">
