--- a/static/css/catalog.css
+++ b/static/css/catalog.css
@@ -50,8 +50,9 @@
     -o-transform: translate(-50%, -50%);
 }
 
-.search-form.focus {
+.search-form:focus-within {
     box-shadow: 0 3px 4px rgba(0, 0, 0, 0.15);
+    border: 1px solid var(--main-color-3);
 }
 
 .search-input {
@@ -95,10 +96,11 @@ input[type="search"]::-webkit-search-cancel-button {
 
 .catalog {
     margin-top: 50px;
+    display: flex;
 }
 
 .container {
-    width: 760px;
+    width: 780px;
     margin: 0 auto;
 }
 
@@ -128,7 +130,7 @@ input[type="search"]::-webkit-search-cancel-button {
 .filterItem {
     background-color: var(--main-color-2);
     border: 1px solid #F1F1F1;
-    box-shadow: 2px 1px 4px 1px rgba(0, 0, 0, 0.27);
+    box-shadow: -5px 10px 15px rgba(22, 22, 22, 0.1);
     color: var(--main-color-1);
     width: 175px;
     height: 241px;
@@ -299,4 +301,116 @@ input[type="search"]::-webkit-search-cancel-button {
     fill: none;
     stroke: var(--main-color-1);
     cursor: pointer;
+}
+
+
+/* Aside */
+
+.aside {
+    width: 338px;
+    height: 675px;
+    border: 1.5px solid var(--main-color-2);
+    /* box-shadow: 1px 4px 5px 2px rgba(0, 0, 0, 0.1); */
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    border-radius: 10px;
+    margin: 0 auto;
+    padding: 20px;
+}
+
+.aside-block-title {
+    font-family: var(--main-font);
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 19px;
+    color: var(--main-color-6);
+    display: flex;
+    align-items: center;
+}
+
+.aside-block-title img {
+    margin-right: 7px;
+}
+
+.aside-block-img {
+    width: 128px;
+    height: 103px;
+    border-radius: 10px;
+    margin-right: 10px;
+    box-shadow: 1px 4px 5px 2px rgba(0, 0, 0, 0.1)
+}
+
+.aside-block-item {
+    display: flex;
+    align-items: flex-start;
+    margin-bottom: 25px;
+    text-decoration: none;
+}
+
+.aside-block-item-title {
+    margin: 0;
+    font-family: var(--main-font);
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 17px;
+    color: var(--main-color-1);
+}
+
+.aside-block-item-time {
+    font-family: var(--main-font);
+    font-weight: 700;
+    font-size: 10px;
+    line-height: 12px;
+    color: var(--main-color-6);
+}
+
+.btn-load_more {
+    font-family: var(--main-font);
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 14px;
+    border: 2px solid var(--main-color-3);
+    border-radius: 20px;
+    outline: none;
+    padding: 12px 23px;
+    cursor: pointer;
+    text-decoration: none;
+    background: transparent;
+    margin: 5px auto 70px;
+    color: var(--main-color-3);
+    transition: 0.3s;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -ms-transition: 0.3s;
+    -o-transition: 0.3s;
+    display: flex;
+    align-items: center;
+}
+
+.btn-load_more:hover {
+    color: var(--main-color-2);
+    background: var(--main-color-3);
+    transition: 0.6s;
+    -webkit-transition: 0.6s;
+    -moz-transition: 0.6s;
+    -ms-transition: 0.6s;
+    -o-transition: 0.6s;
+}
+
+.btn-load_more svg {
+    fill: var(--main-color-3);
+    transition: 0.3s;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -ms-transition: 0.3s;
+    -o-transition: 0.3s;
+    margin-right: 6px;
+}
+
+.btn-load_more:hover svg {
+    fill: var(--main-color-2);
+    transition: 0.6s;
+    -webkit-transition: 0.6s;
+    -moz-transition: 0.6s;
+    -ms-transition: 0.6s;
+    -o-transition: 0.6s;
 }
