--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -40,7 +40,7 @@
                     </svg>
 
                 </a>
-                <p>Обучение</p>
+                <p>Главная</p>
             </li>
             <li>
                 <a href="catalog.html" class="nav-icon">
@@ -82,7 +82,7 @@
 
             <div class="header-nav">
                 <nav class="main-nav">
-                    <a href="#" class="main-nav__link">обучение</a>
+                    <a href="../index.html" class="main-nav__link">главная</a>
                     <a href="catalog.html" class="main-nav__link">каталог</a>
                     <a href="login.html" class="main-nav__link">войти</a>
                 </nav>
