--- a/static/css/catalog.css
+++ b/static/css/catalog.css
@@ -11,8 +11,7 @@
 .header-menu {
     display: flex;
     align-items: center;
-    padding-top: 0;
-    margin-top: -40px;
+    margin-top: -60px;
 }
 
 .catalog-nav {
@@ -26,6 +25,8 @@
 
 .topnav {
     padding-top: 20px;
+    position: absolute;
+    right: -65px;
 }
 
 .search-form {
@@ -95,7 +96,7 @@ input[type="search"]::-webkit-search-cancel-button {
 /* catalog */
 
 .catalog {
-    margin-top: 50px;
+    margin-top: 70px;
     display: flex;
 }
 
