--- a/static/css/catalog.css
+++ b/static/css/catalog.css
@@ -135,13 +135,30 @@ input[type="search"]::-webkit-search-cancel-button {
     color: var(--main-color-1);
     width: 175px;
     height: 241px;
-    margin: 2px 2px 30px 2px;
+    margin: 10px 2px 25px;
     display: none;
     border-radius: 20px;
     -webkit-border-radius: 20px;
     -moz-border-radius: 20px;
     -ms-border-radius: 20px;
     -o-border-radius: 20px;
+    transition: 0.6s;
+    -webkit-transition: 0.6s;
+    -moz-transition: 0.6s;
+    -ms-transition: 0.6s;
+    -o-transition: 0.6s;
+}
+
+.filterItem:hover {
+    transform: scale(1.05);
+    -webkit-transform: scale(1.05);
+    -moz-transform: scale(1.05);
+    -ms-transform: scale(1.05);
+    -o-transform: scale(1.05);
+}
+
+.filterItem-link {
+    text-decoration: none
 }
 
 .show {
@@ -149,7 +166,7 @@ input[type="search"]::-webkit-search-cancel-button {
 }
 
 .courses-wrap {
-    margin-top: 70px;
+    margin-top: 50px;
     overflow: hidden;
     display: flex;
     flex-wrap: wrap;
