--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -32,7 +32,7 @@
     <!-- Mob Menu -->
     <nav class="mob-nav">
         <ul>
-            <li class="nav-item active-icon">
+            <li class="nav-item">
                 <a href="../index.html" class="nav-icon">
                     <svg width="22" height="24" viewBox="0 0 22 24" xmlns="http://www.w3.org/2000/svg">
                         <path
@@ -42,7 +42,7 @@
                 </a>
                 <p>Главная</p>
             </li>
-            <li>
+            <li class="nav-item active-icon">
                 <a href="catalog.html" class="nav-icon">
                     <svg width="24" height="24" viewBox="0 0 19 21" xmlns="http://www.w3.org/2000/svg">
                         <path opacity="0.8"
@@ -51,7 +51,7 @@
                 </a>
                 <p>Каталог</p>
             </li>
-            <li>
+            <li class="nav-item">
                 <a href="login.html" class="nav-icon">
                     <svg width="24" height="24" viewBox="0 0 21 22" xmlns="http://www.w3.org/2000/svg">
                         <path opacity="0.8"
@@ -61,7 +61,7 @@
                 </a>
                 <p>Войти</p>
             </li>
-            <li>
+            <li class="nav-item ">
                 <a href="#" class="nav-icon">
                     <svg width="24" height="24" viewBox="0 0 21 20" xmlns="http://www.w3.org/2000/svg">
                         <path opacity="0.8"
@@ -100,7 +100,7 @@
     </section>
 
     <section class="catalog">
-        <div class="container">
+        <div class="container-block">
             <div class="catalog-header">
                 <div class="catalog-header__text">
                     <h1 class="catalog-header-title">Наши курсы</h1>
