--- a/static/css/catalog.css
+++ b/static/css/catalog.css
@@ -458,7 +458,7 @@ input[type="search"]::-webkit-search-cancel-button {
     .catalog {
         display: flex;
         margin: 0 auto;
-        width: 85%;
+        width: 90%;
         justify-content: center;
     }
     .catalog-nav {
@@ -466,6 +466,12 @@ input[type="search"]::-webkit-search-cancel-button {
     }
     .topnav {
         margin-top: 50px;
+    }
+    .filterItem {
+        width: 45%;
+    }
+    .filterItem-img {
+        width: 100%;
     }
 }
 
