--- a/static/css/catalog.css
+++ b/static/css/catalog.css
@@ -11,7 +11,7 @@
 .header-menu {
     display: flex;
     align-items: center;
-    margin-top: -60px;
+    margin-top: -80px;
     margin-right: 22%;
 }
 
@@ -272,7 +272,7 @@ input[type="search"]::-webkit-search-cancel-button {
     font-size: 14px;
     line-height: 17px;
     color: var(--main-color-1);
-    margin: 0;
+    margin: 10px 0 0;
 }
 
 .filterItem-active {
